# PolaritonSqueezing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  PhononSqueezing.cbp  README.md  checkDocc.txt  cmake_install.cmake
dataRef/: gsPropQuad2PhGPH20NB10.hdf5  gsPropQuad2PhGPH20NB12.hdf5  gsPropQuad2PhGPH20NB14.hdf5  gsPropQuad2PhGPH20NB16.hdf5  gsPropQuad2PhGPH20NB6.hdf5  gsPropQuad2PhGPH50NB10.hdf5  gsPropQuad2PhGPH50NB12.hdf5  gsPropQuad2PhGPH50NB14.hdf5  gsPropQuad2PhGPH50NB16.hdf5  gsPropQuad2PhGPH50NB6.hdf5  tEvol1PhGPH10WP20WD200FD300NB10TS80WPh2011.hdf5  tEvol2PhGPH20WP0WD200FD300NB10TS80WPh2022classic.hdf5  tEvol2PhGPH20WP14WD200FD300NB10TS40WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB10TS80WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB12TS40WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB4TS40WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB6TS40WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB8TS10WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB8TS160WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB8TS20WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB8TS40WPh2022.hdf5  tEvol2PhGPH20WP14WD200FD300NB8TS80WPh2022.hdf5  tEvol2PhGPH20WP4WD200FD300NB10TS80WPh2022.hdf5  tEvol2PhGPH20WP71WD156FD300NB10TS80WPh2022.hdf5  tEvol2PhGPH20WP71WD200FD300NB10TS80WPh2022.hdf5  tEvol2PhGPH20WP71WD256FD300NB10TS80WPh2022.hdf5  tEvol2PhGPH20WP7WD200FD300NB10TS80WPh2022.hdf5  tEvol2PhGPH50WP0WD200FD300NB10TS80WPh1230classic.hdf5  tEvol2PhGPH50WP14WD200FD300NB10TS40WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB10TS80WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB12TS40WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB4TS40WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB6TS40WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB8TS10WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB8TS160WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB8TS20WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB8TS40WPh1230.hdf5  tEvol2PhGPH50WP14WD200FD300NB8TS80WPh1230.hdf5  tEvol2PhGPH50WP4WD200FD300NB10TS80WPh1230.hdf5  tEvol2PhGPH50WP71WD156FD300NB10TS80WPh1230.hdf5  (+3 more)
include/: calcGS.h  checkSomeStuff.h  evalExpectation.h  evalGSProps.h  globals.h  matrixOperations.h  setupElectronicOperators2Bands.h  setupElectronicOperatorsSmall.h  timeEvolution.h  timeEvolution2Bands.h  timeStep.h  utils.h
include/onePhonon/: calcGSOnePh.h  evalDoccInGSOnePh.h  evalDoccInGs2Bands.h  evalExpectationOnePh.h  evalGSProps2Bands.h  setUpGlobalHamiltonianOnePh.h  setupBasicOperators2Bands.h  setupBasicOperatorsOnePh.h  setupHGlobal2Bands.h  timeEvolution.h  timeStep.h
include/onlyPhot/: evalGSPropsOnlyPhot.h  setUpGlobalHamiltonianOnlyPhot.h  setupBasicOperatorsOnlyPhot.h
include/twoPhonons/: evalDoccInGS.h  evalExpectation.h  setUpGlobalHamiltonian.cpp.h  setUpGlobalHamiltonian.h  setupBasicOperators.h
include/utils/: makeFilenames.h  setupOps.h  writeStuffToHdf5.h
plot/: ConvergencePlots.py  classicalVSQuantum.py  gsProps2Bands.py  interbandPaper.py  plotGSProps.py  plotLevels.py  plotMain.py  plotPT.py  plotPolaritonFreqs.py  plotTimeEvol.py  plotTimeEvolution.py  timeEvol2Bands.py  timeEvolConvergence.py
setupH/: globals.py  setupFunctions.py  setupH.py  singleBandHubbard.py  twoOrbitalH.py
spectra/: README.md  ed_ssh.cpp  main_plot.py  makefile  matrix.h  moduleCommand
spectra/DATA/Contrib/: Contrib_J0_WP_samefreq.csv  Contrib_J0_samefreq.csv  Contrib_Om02_V2.csv  Contrib_U5J_1peak_WP_samefreq.csv  Contrib_U5J_1peak_samefreq.csv  Contrib_U5J_2peak_WP_samefreq.csv  Contrib_U5J_2peak_samefreq.csv
spectra/DATA/Hubbard/: ARPES_PHS_hubbard_J00_WP00_SIG8_NT24_V2.csv  ARPES_PHS_hubbard_J02_WP00_SIG8_NT24_V2.csv
spectra/DATA/J02_samefreq_Om04/: ARPES_PHS_J02_samefreq_WP00.csv  ARPES_PHS_J02_samefreq_WP005.csv  ARPES_PHS_J02_samefreq_WP01.csv  ARPES_PHS_J02_samefreq_WP015.csv  ARPES_PHS_J02_samefreq_WP02.csv  ARPES_PHS_J02_samefreq_WP025.csv  ARPES_PHS_J02_samefreq_WP03.csv  ARPES_PHS_J02_samefreq_WP035.csv  ARPES_PHS_J02_samefreq_WP04.csv  ARPES_PHS_J02_samefreq_WP045.csv  ARPES_PHS_J02_samefreq_WP05.csv  ARPES_PHS_J02_samefreq_WP055.csv  ARPES_PHS_J02_samefreq_WP06.csv  ARPES_PHS_J02_samefreq_WP065.csv  ARPES_PHS_J02_samefreq_WP07.csv  ARPES_PHS_J02_samefreq_WP075.csv  ARPES_PHS_J02_samefreq_WP08.csv  ARPES_PHS_J02_samefreq_WP085.csv  ARPES_PHS_J02_samefreq_WP09.csv  ARPES_PHS_J02_samefreq_WP095.csv  ARPES_PHS_J02_samefreq_WP10.csv  ARPES_PHS_J02_samefreq_WP105.csv  ARPES_PHS_J02_samefreq_WP11.csv  ARPES_PHS_J02_samefreq_WP115.csv  ARPES_PHS_J02_samefreq_WP12.csv
spectra/DATA/J0_samefreq_Om04/: ARPES_PHS_J00_samefreq_WP00.csv  ARPES_PHS_J00_samefreq_WP005.csv  ARPES_PHS_J00_samefreq_WP01.csv  ARPES_PHS_J00_samefreq_WP015.csv  ARPES_PHS_J00_samefreq_WP02.csv  ARPES_PHS_J00_samefreq_WP025.csv  ARPES_PHS_J00_samefreq_WP03.csv  ARPES_PHS_J00_samefreq_WP035.csv  ARPES_PHS_J00_samefreq_WP04.csv  ARPES_PHS_J00_samefreq_WP045.csv  ARPES_PHS_J00_samefreq_WP045_V2.csv  ARPES_PHS_J00_samefreq_WP05.csv  ARPES_PHS_J00_samefreq_WP055.csv  ARPES_PHS_J00_samefreq_WP06.csv  ARPES_PHS_J00_samefreq_WP065.csv  ARPES_PHS_J00_samefreq_WP07.csv  ARPES_PHS_J00_samefreq_WP075.csv  ARPES_PHS_J00_samefreq_WP08.csv  ARPES_PHS_J00_samefreq_WP085.csv  ARPES_PHS_J00_samefreq_WP09.csv  ARPES_PHS_J00_samefreq_WP095.csv  ARPES_PHS_J00_samefreq_WP10.csv  ARPES_PHS_J00_samefreq_WP105.csv  (+3 more)
src/: calcGS.cpp  checkSomeStuff.cpp  evalExpectation.cpp  evalGSProps.cpp  mainSqueeze.cpp  matrixOperations.cpp  setupElectronicOperators2Bands.cpp  setupElectronicOperatorsSmall.cpp  timeEvolution.cpp  timeEvolution2Bands.cpp  timeStep.cpp
src/onePhonon/: calcGSOnePh.cpp  evalDoccInGS2Bands.cpp  evalDoccInGSOnePh.cpp  evalExpectationOnePh.cpp  evalGSProps2Bands.cpp  setHGlobal2Bands.cpp  setUpGlobalHamiltonianOnePh.cpp  setupBasicOpertors2Bands.cpp  setupBasicOpertorsOnePh.cpp  timeEvolution.cpp  timeStep.cpp
src/onlyPhot/: evalGSPropsOnlyPhot.cpp  setUpGlobalHamiltonianOnlyPhot.cpp  setupBasicOpertorsOnlyPhot.cpp
src/twoPhonons/: evalDoccInGS.cpp  evalExpectation.cpp  setUpGlobalHamiltonian.cpp  setupBasicOpertors.cpp
src/utils/: makeFilenames.cpp  setupOps.cpp  writeStuffToHdf5.cpp
